--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
+body{
+    background-color:#413156 ;
+}
 h1{
     text-align: center;
+    color: aliceblue;
 }
 
 .container{
@@ -7,6 +11,22 @@ h1{
     clear: both;
 }
 .container input{
-    width: 100px;
+    width: 500px;
     clear: both;
+}
+button{
+    text-align: center;
+    margin: auto;
+    position: relative;
+    display: flex;
+    padding: 2%;
+
+
+}
+ img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+    width: 80%;
 }
